--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,8 @@
       { "props": true, "ignorePropertyModificationsFor": ["state"] }
     ],
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": "warn",
+    "react/prop-types": "off",
+    "no-undef": "off"
   }
 }
