--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.5.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
-    "vite-plugin-svgr": "^1.0.1"
+    "vite-plugin-svgr": "^1.0.1",
+    "vite-tsconfig-paths": "^3.3.17"
   }
 }
