--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "react/prop-types": "off",
-    "no-undef": "off"
+    "no-undef": "off",
+    "import/no-extraneous-dependencies": ["off", { "devDependencies": false }]
   }
 }
