add hooks dir and @hooks path, fix minor error in main.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@app/*": ["app/*"],
       "@assets/*": ["assets/*"],
       "@common/*": ["common/*"],
+      "@hooks/*": ["common/hooks/*"],
       "@components/*": ["components/*"],
       "@features/*": ["features/*"],
       "@styles/*": ["styles/*"]
