--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
     "browser": true,
     "es2021": true
   },
-  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "airbnb",
+    "prettier"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
@@ -18,7 +23,9 @@
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [
       "warn",
-      { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
+      {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     ],
     "react/jsx-one-expression-per-line": "off",
     "import/extensions": "off",
@@ -26,13 +33,21 @@
     "import/prefer-default-export": "off",
     "no-param-reassign": [
       "error",
-      { "props": true, "ignorePropertyModificationsFor": ["state"] }
+      {
+        "props": true,
+        "ignorePropertyModificationsFor": ["state"]
+      }
     ],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "react/prop-types": "off",
     "no-undef": "off",
-    "import/no-extraneous-dependencies": ["off", { "devDependencies": false }],
+    "import/no-extraneous-dependencies": [
+      "off",
+      {
+        "devDependencies": false
+      }
+    ],
     "no-restricted-exports": "off" // export barrels, see https://github.com/eslint/eslint/issues/15617
   }
 }
